# duta

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
agent_dispatcher/: __init__.py  decorators.py  dispatcher.py  result.py  task.py
agent_dispatcher.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_decorators.py  test_dispatcher.py  test_result.py  test_task.py
